# derelect

./: CMakeLists.txt  build.sh
src/derelect/main/: main.cpp
src/game/main/: entrypoint.cpp  entrypoint.hpp
src/game/main/ecs/: component.hpp  entityId.cpp  entityId.hpp  entityManager.cpp  entityManager.hpp
src/game/test/: simple.cpp
src/game/test/ecs/: entityId_test.cpp  entityManager_test.cpp
